fixed tubeyou overlapping with the logo when in smaller screen

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -133,3 +133,9 @@
 .logoText {
   padding-right: 20px;
 }
+
+@media (max-width: 600px) {
+  .logoContainer {
+    margin-right: 0;
+  }
+}
